# MDSC

./: CITATION.cff  CMakeLists.txt  Makefile  README.md
docs/: Doxyfile
examples/lj_berendsen/: README.md  in.mdsc  run.sh
include/mdsc/: config.h  force.h  integrator.h  io.h  neigh.h  system.h  thermostat.h  vec.h
src/: forces_lj.c  integrator_vv.c  io_and_parse.c  lj_cuda.cu  main.c  neigh_verlet.c  system.c  thermostat.c  vec.c
tests/: test_lj.c  test_vec.c
